# Newsie

./: .gitignore  ARCHITECTURE.md  README.md
blank_template/frontend/: .gitignore  components.json  eslint.config.js  jsconfig.json  package.json  vite.config.js
blank_template/frontend/src/: App.jsx  Layout.jsx  main.jsx
blank_template/server/: .env.sample  .gitignore  .prettierrc  TODO.md  package-lock.json
blank_template/server/src/: index.js
frontend/: .env.sample  .gitignore  .prettierignore  TODO.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: audio-processor.js
frontend/public/video/: Newsie_Impact_Model.docx
frontend/src/: App.jsx  Layout.jsx  index.css
frontend/src/components/: AIVideoModal.jsx  CategoryBadge.jsx  ChatBot.jsx  DetailView.jsx  ErrorBoundary.jsx  HamburgerMenu.jsx  NewsCard.jsx  OverlayComponents.jsx  ProtectedRoute.jsx  Survey.jsx  TextToSpeech.jsx  VoiceChat.jsx  index.js
frontend/src/context/: NewsContext.jsx  (+1 more)
python_server/: .gitignore  ARCHITECTURE.md  demo_genz.py  genz_editor.py  image_service.py  main.py  pyproject.toml  server.py  voice_chat.py
python_server/static/: app.js  index.html  style.css  voice-chat.js
rag-server/: .env.sample  .gitignore  README.md  embedding_sync.py  main.py  news_bootstrapper.py  pyproject.toml  schemas.py  story_arc_router.py  test_vibe.py  test_vibe2.py  vibe_translator.py  vibe_video_generator.py
server/: .gitignore  nodemon.json  package-lock.json  package.json  test_feed.json  test_req.js  test_trans_out.json
server/src/: app.js  index.js
(+55 files in other folders)
